--- a/nextjs-tourism-app/src/styles/consentBanner.module.css
+++ b/nextjs-tourism-app/src/styles/consentBanner.module.css
@@ -7,7 +7,7 @@
   color: #fff;
   padding: 1rem;
   text-align: center;
-  z-index: 1000;
+  /* z-index: 12000; */
   box-shadow: 0 -2px 16px rgba(0,0,0,0.2);
 }
 
